tweak: redo body spacing, fix for mobile, better bar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
   width: 100vw;
   height: 100vh;
   text-align: center;
+  scrollbar-gutter: stable;
 }
