--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
+  /* min-width: 320px; */
+  min-width: 1px;
   min-height: 100vh;
 }
